--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jest": "^29.5.0",
     "jest-css-modules-transform": "^4.4.2",
     "jest-localstorage-mock": "^2.4.26",
+    "jest-transform-css": "^6.0.1",
     "jsdom-global": "^3.0.2",
     "style-loader": "^3.3.2",
     "stylelint": "^13.13.1",
